[package]
name = "walle-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
delete-events = []

[dependencies]
sqlx = { version = "0.6.2", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
], default-features = false }
walle-core = "0.7.2"
rmp-serde = "1.1"
tokio = "1.24"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.24", features = ["full"] }
